--- a/index.html
+++ b/index.html
@@ -5,13 +5,65 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>Supawat Vitoorapakorn</h1>
-		<p>I'm learning to code on Codecademy! My goals include:</p>
-		<ul>
-			<li>Understand how the web is made</li>
-			<li>Be able to collaborate with developers</li>
-			<li>Help the world</li>
-		</ul>
-		<p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
+		<!--Banner-->
+		<div class = "banner">
+			<h1>Broadway Design</h1>
+			<p>
+				<a href="">Home</a><br>
+				<a href="">Process</a><br>
+				<a href="">Work</a><br>
+				<a href="">Team</a><br>
+				<a href="">Contact</a>
+			</p>
+		</div>
+		
+		
+		<!--Body-->
+		<div class="body">
+			<h2>Our Process</h2>
+			
+			<h3>Identify</h2>
+			<img src="">
+			<p>We focus on the most important details.</p>
+			
+			<h3>Understand</h2>
+			<img src="">
+			<p>We study our projects inside and out.</p>
+			
+			<h3>Execute</h2>
+			<img src="">
+			<p>We put everything into our work</p>
+		</div>
+		
+		<!--Conact: Design in New York-->
+		<div class="contact">
+			<h4>Designed in New York</h4>
+			
+			<h3>Portfolio</h3>
+			<p>Coming Soon</p>
+			
+			<h3>Team</h3>
+			<p>We're Hiring!</p>
+			
+			<h3>Contact</h3>
+			<p>
+				Phone: (555)-555-5555<br>
+				E-mail: test@example.com<br>
+				Twitter: @test
+			</p>
+		</div>
+
+
+		<!--Footer-->
+		<div class="footer">
+			<span>&copy Broadway 2017</span>
+			<a href="">Home</a>
+			<a href="">About</a>
+			<a href="">Work</a>
+			<a href="">Team</a>
+			<a href="">Contact</a>
+		</div>
+		
+		
 	</body>
 </html>
