--- a/index.html
+++ b/index.html
@@ -6,50 +6,50 @@
 	</head>
 	<body>
 		<!--Banner-->
-		<div class = "banner">
+		<div class = "banner" id="home">
 			<h1>Broadway Design</h1>
 			<p>
-				<a href="">Home</a><br>
-				<a href="">Process</a><br>
-				<a href="">Work</a><br>
-				<a href="">Team</a><br>
-				<a href="">Contact</a>
+				<a href="#home">Home</a><br><br>
+				<a href="#process">Process</a><br><br>
+				<a href="#work">Work</a><br><br>
+				<a href="#team">Team</a><br><br>
+				<a href="#contact">Contact</a>
 			</p>
 		</div>
 		
 		
 		<!--Body-->
 		<div class="body">
-			<h2>Our Process</h2>
+			<h2 id="process">Our Process</h2>
 			
 			<h3>Identify</h2>
-			<img src="">
+			<img src="resources/assets/identify.svg ">
 			<p>We focus on the most important details.</p>
 			
 			<h3>Understand</h2>
-			<img src="">
+			<img src="resources/assets/understand.svg">
 			<p>We study our projects inside and out.</p>
 			
 			<h3>Execute</h2>
-			<img src="">
+			<img src="resources/assets/execute.svg">
 			<p>We put everything into our work</p>
 		</div>
 		
 		<!--Conact: Design in New York-->
 		<div class="contact">
-			<h4>Designed in New York</h4>
+			<h4 class="banner">Designed in New York</h4>
 			
-			<h3>Portfolio</h3>
+			<h3 id="work">Portfolio</h3>
 			<p>Coming Soon</p>
 			
-			<h3>Team</h3>
+			<h3 id="team">Team</h3>
 			<p>We're Hiring!</p>
 			
-			<h3>Contact</h3>
+			<h3 id="cotact">Contact</h3>
 			<p>
-				Phone: (555)-555-5555<br>
-				E-mail: test@example.com<br>
-				Twitter: @test
+				Phone: (555)-555-5555<br><br>
+				E-mail: test@example.com<br><br>
+				Twitter: @test<br>
 			</p>
 		</div>
 
@@ -57,11 +57,11 @@
 		<!--Footer-->
 		<div class="footer">
 			<span>&copy Broadway 2017</span>
-			<a href="">Home</a>
-			<a href="">About</a>
-			<a href="">Work</a>
-			<a href="">Team</a>
-			<a href="">Contact</a>
+			<a href="#home">Home</a>
+			<a href="#home">About</a>
+			<a href="work">Work</a>
+			<a href="team">Team</a>
+			<a href="contact">Contact</a>
 		</div>
 		
 		
